Version 1.4 - xxxx-xx-xx

Version 1.3 - 2014-10-20
 * The "About" window now displays the versions of libraries used by Picard
 * Picard now correctly handles matching of MP3 files saved in ID3v2.3 tags
   (which is the version that Microsoft Windows and iTunes both use).
   Note: You may need to re-save your tags once to get them to match in future.
 * A sort tags plugin is now provided as tag data is no longer displayed sorted by default.
 * A new tag, musicbrainz_releasetrackid, containing the MusicBrainz Track MBID
   introduced in the May 2013 schema change release, is now written to files.
 * Add %_recordingtitle% (PICARD-515)
 * Fix plugin install bugs (PICARD-444)
 * Fix Options / File naming examples to handle primary/secondary release types (PICARD-516)
 * A new advanced option is available to permanently set the starting directory
   for the file browser and "Add files/folder" buttons.
 * Requests to Musicbrainz against your own account e.g. for collections are now handled through SSL (PICARD-337)
 * Refresh of Albums using Ctrl-R and selection of Other Releases are now more responsive during batch lookups.
 * Main window is now emitting a "selection_updated" signal, plugin api version bumps to 1.3.0
 * Append system information to user-agent string
 * Compilation tag/variable functionality (for tagging & file naming) has been split into two:
   - %compilation% is now aligned with iTunes, and set only for Various Artists type compilations
   - %_multiartist% variable now indicates whether this release has tracks by multiple artists
     (in order to prepend the artist name to the filename as shown in the default file naming script)
 * autodetect the CD drive on Mac OS X (PICARD-123)
 * Ignore directories and files while indexing when show_hidden_files option is set to False (PICARD-528)
 * Add ignore_regex option which allows one to ignore matching paths, can be set in Options > Advanced (PICARD-528)