@@ -23,6 +23,9 @@ import ntpath
 import re
 import sys
 import unicodedata
+if sys.platform == 'win32':
+	from ctypes import windll
+
 from time import time
 from PyQt4 import QtCore
 from encodings import rot_13
@@ -312,10 +315,28 @@ else:
     os_path_samefile = os.path.samefile
 
 
-def is_hidden_path(path):
-    """Returns true if at least one element of the path starts with a dot"""
-    path = os.path.normpath(path)  # we need to ignore /./ and /a/../ cases
-    return any(s.startswith('.') for s in path.split(os.sep))
+def is_hidden(filepath):
+    """Test whether a file or directory is hidden.
+    A file is considered hidden if it starts with a dot
+    on non-Windows systems or if it has the "hidden" flag
+    set on Windows."""
+    name = os.path.basename(os.path.abspath(filepath))
+    return (name.startswith('.') and sys.platform != 'win32') \
+        or _has_hidden_attribute(filepath)
+
+
+def _has_hidden_attribute(filepath):
+    if sys.platform != 'win32':
+        return False
+    # FIXME: On OSX detecting hidden files involves more
+    # than just checking for dot files, see
+    # https://stackoverflow.com/questions/284115/cross-platform-hidden-file-detection
+    try:
+        attrs = windll.kernel32.GetFileAttributesW(unicode(filepath))
+        assert attrs != -1
+        return bool(attrs & 2)
+    except (AttributeError, AssertionError):
+        return False
 
 
 def linear_combination_of_weights(parts):
