@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>338</width>
+    <width>392</width>
     <height>435</height>
    </rect>
   </property>
@@ -16,27 +16,34 @@
      <property name="title">
       <string>Advanced options</string>
      </property>
-      <layout class="QGridLayout">
-	<property name="spacing">
-	<number>2</number>
-	</property>
-	<item row="1" column="0">
-	  <widget class="QLabel" name="label_ignore_regex">
-		<property name="text">
-		<string>Ignore file paths matching the following regular expression:</string>
-		</property>
-	  </widget>
-	</item>
-	<item row="2" column="0">
-	  <widget class="QLineEdit" name="ignore_regex"/>
-	</item>
-	<item row="3" column="0">
-	  <widget class="QLabel" name="regex_error" >
-	  <property name="text" >
-		<string/>
-	  </property>
-	  </widget>
-	</item>
+     <layout class="QGridLayout">
+      <property name="spacing">
+       <number>2</number>
+      </property>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_ignore_regex">
+        <property name="text">
+         <string>Ignore file paths matching the following regular expression:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLineEdit" name="ignore_regex"/>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="regex_error">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QCheckBox" name="ignore_hidden_files">
+        <property name="text">
+         <string>Ignore hidden files</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
